# iWatch

./: .gitignore  .gitignored  .project  README.md  build.gradle  gradle.properties  local.properties  settings.gradle  任务.txt
app/: .gitignore  .project  build.gradle  mapping.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ArtHook.cpp  ArtHook.h  ArtHookField.cpp  ArtHookField.h  ArtMethodHook.cpp  ArtMethodHook.h  ArtRestore.cpp  ArtRestore.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  field_hook.cpp  inner_class.cc  inner_class.h  iwatch.cpp  iwatch_impl.cpp  iwatch_impl.h  runtime.cpp  runtime.h
app/src/main/cpp/art/: ArtMethod_11.h  JNIEnvExt.h  ScopedFastNativeObjectAccess.h  art_method5_0.h  art_method_11.h  scoped_thread_state_change.h  value_object.h
app/src/main/cpp/common/: constants.h  elf_op.cpp  elf_op.h  elfop.cpp  elfop.h  log.h
app/src/main/cpp/util/: artmethod.h  log.h
app/src/main/java/com/alipay/euler/andfix/annotation/: MethodReplace.java
app/src/main/java/com/habbyge/iwatch/: ArtMethodSize.java  FirstFragment.java  HookManager.java  IWatch.java  IWatchApplication.java  MainActivity.java  MethodHandler.java  MethodHook.java  SecondFragment.java
app/src/main/java/com/habbyge/iwatch/cgi/: IPatchDownloadCallback.java  PatchDownloder.java
app/src/main/java/com/habbyge/iwatch/loader/: SecurityChecker.java
app/src/main/java/com/habbyge/iwatch/patch/: FixMethodAnno.java  Patch.java  PatchManager.java  StopSyntheticAnno.java
app/src/main/java/com/habbyge/iwatch/test/: Fix0.java  MainActivity.java  MainActivity2.java  MainActivity2Fix.java  Test.java  TestCase0.java  TestCase1.java  TestClickListener.java  TestInlineCase.java  TestInlineCase_Fix.java
app/src/main/java/com/habbyge/iwatch/util/: ArrayUtil.java  CharSequenceUtil.java  CharUtil.java  FileUtil.java  HellUtils.java  ObjectUtil.java  ReflectUtil.java  StringUtil.java  Type.java  Util.java
app/src/main/java/com/habbyge/sample/: IWatchApplication.java  MainActivity.java  Test.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
